# cdash-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/cdash_mcp/: __init__.py  __main__.py  client.py  server.py
tests/: test_client.py  test_server.py
