[project]
name = "cdash-mcp"
version = "0.1.0"
description = "MCP server for querying Kitware CDash CI/CD build and test results"
readme = "README.md"
authors = [
    { name = "Chris Byrohl", email = "9221545+cbyrohl@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.26.0",
]

[project.scripts]
cdash-mcp = "cdash_mcp.__main__:main"

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
