[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cdash-mcp"
version = "0.1.0"
description = "MCP server for querying Kitware CDash CI/CD build and test results"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "Chris Byrohl" }]
keywords = ["mcp", "cdash", "ci", "cd", "testing", "builds", "kitware", "cmake", "ctest"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.26.0",
]

[project.scripts]
cdash-mcp = "cdash_mcp.__main__:main"

[project.urls]
Homepage = "https://github.com/cbyrohl/cdash-mcp"
Issues = "https://github.com/cbyrohl/cdash-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/cdash_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["integration: tests that hit the live CDash API"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.8",
]
